添加下载失败时的重试

--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "max_workers": 10,
   "ffmpeg": "ffmpeg",
   "page_size": 20,
-  "default_checked": false
+  "default_checked": true,
+  "max_retry_count": 3
 }
